@@ -36,6 +36,12 @@ public class MouseOverlay extends JComponent
 
   private static int y;
 
+  private static Point point = GeometryFactory.DEFAULT_3D.point();
+
+  public static Point getEventPoint() {
+    return point;
+  }
+
   public static int getEventX() {
     return x;
   }
@@ -56,7 +62,7 @@ public class MouseOverlay extends JComponent
     this.mapPanel = mapPanel;
     this.viewport = mapPanel.getViewport();
     setFocusable(true);
-    layeredPane.add(this, new Integer(Integer.MAX_VALUE));
+    layeredPane.add(this, Integer.valueOf(Integer.MAX_VALUE));
     addMouseListener(this);
     addMouseMotionListener(this);
     addMouseWheelListener(this);
@@ -86,7 +92,7 @@ public class MouseOverlay extends JComponent
     }
   }
 
-  public Point getEventPoint() {
+  public Point getEventPointRounded() {
     final GeometryFactory geometryFactory = getGeometryFactory();
     final Point point = this.viewport.toModelPointRounded(geometryFactory, x, y);
     return point;
@@ -200,8 +206,9 @@ public class MouseOverlay extends JComponent
 
   @Override
   public void mouseExited(final MouseEvent event) {
-    x = -1;
-    y = -1;
+    MouseOverlay.x = -1;
+    MouseOverlay.y = -1;
+    MouseOverlay.point = GeometryFactory.DEFAULT_3D.point();
     this.mapPanel.mouseExitedCloseSelected(event);
     for (final Component overlay : getOverlays()) {
       if (overlay instanceof MouseListener) {
@@ -286,8 +293,8 @@ public class MouseOverlay extends JComponent
   }
 
   private void updateEventPoint(final MouseEvent e) {
-    x = e.getX();
-    y = e.getY();
+    MouseOverlay.x = e.getX();
+    MouseOverlay.y = e.getY();
+    MouseOverlay.point = this.viewport.toModelPoint(x, y);
   }
-
 }
